# Bisondb

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: protocol.md
src/cli/: main.cpp
src/client/: client.cpp  client.hpp
src/core/: bson_decoder.cpp  bson_decoder.hpp  bson_encoder.cpp  bson_encoder.hpp  datetime_util.hpp  decimal128.cpp  decimal128.hpp  error.hpp  json_parser.cpp  json_parser.hpp  json_writer.cpp  json_writer.hpp  utf8.hpp  value.cpp  value.hpp  version.cpp
src/core/btree/: btree.cpp  btree.hpp
src/core/net/: socket.cpp  socket.hpp  thread_pool.hpp  tls.cpp  tls.hpp
src/core/query/: database.cpp  database.hpp  index_manager.hpp  query.cpp  query.hpp
src/core/store/: collection.cpp  collection.hpp
src/server/: commands.cpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
src/shell/: banner.cpp  banner.hpp  main.cpp  printer.cpp  printer.hpp  repl.cpp  repl.hpp
tests/: test_banner.cpp  test_btree.cpp  test_matcher.cpp  test_query.cpp  test_tls.cpp
tests/corpus/: download.ps1  download.sh
tests/integration/: test_auth_server.cpp  test_server.cpp  test_shell.cpp
